{
    "name": "PlayerInputActions",
    "maps": [
        {
            "name": "Movement",
            "id": "d461f66a-7efd-48fb-beb7-ecd7258703e2",
            "actions": [
                {
                    "name": "Move",
                    "type": "Value",
                    "id": "22edab2a-7619-44ec-879a-c04e4e2a4359",
                    "expectedControlType": "Vector2",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": true
                }
            ],
            "bindings": [
                {
                    "name": "WASD",
                    "id": "7d0f7e77-a55b-4095-beeb-1087d57fdb4f",
                    "path": "2DVector",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Move",
                    "isComposite": true,
                    "isPartOfComposite": false
                },
                {
                    "name": "up",
                    "id": "6716a745-ed9a-450f-8106-c65c5bc90d5f",
                    "path": "<Keyboard>/w",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Move",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "down",
                    "id": "150f8785-a141-4798-b83a-8d8c623e7306",
                    "path": "<Keyboard>/s",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Move",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "left",
                    "id": "7fb53ef4-9680-4934-a553-336b7151f16a",
                    "path": "<Keyboard>/a",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Move",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "right",
                    "id": "2d6e68de-1c72-414c-b39d-8933f69b1abe",
                    "path": "<Keyboard>/d",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Move",
                    "isComposite": false,
                    "isPartOfComposite": true
                }
            ]
        },
        {
            "name": "Camera",
            "id": "7263f531-ab1a-4747-ad38-f2b7ecdf3d33",
            "actions": [
                {
                    "name": "Scroll",
                    "type": "Value",
                    "id": "a4ae7d61-4a19-4ca5-a27d-004b5ca8e86f",
                    "expectedControlType": "Axis",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": true
                }
            ],
            "bindings": [
                {
                    "name": "",
                    "id": "7cf9f328-6c71-45e4-b717-52d1d3283be3",
                    "path": "<Mouse>/scroll/y",
                    "interactions": "",
                    "processors": "Scale(factor=0.01)",
                    "groups": "",
                    "action": "Scroll",
                    "isComposite": false,
                    "isPartOfComposite": false
                }
            ]
        },
        {
            "name": "Interaction",
            "id": "11e19665-0238-4a0c-9559-3a728a78c86a",
            "actions": [
                {
                    "name": "Interact",
                    "type": "Button",
                    "id": "a810f263-3139-43ea-ac2f-314de0b03b84",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "InteractAlternate",
                    "type": "Button",
                    "id": "ff5f2bb5-7b66-487f-a497-55391f674c73",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                }
            ],
            "bindings": [
                {
                    "name": "",
                    "id": "50a1d4f1-9225-4a59-86af-604c915e3d1a",
                    "path": "<Mouse>/leftButton",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Interact",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "e29c5480-01ad-4bcf-afa8-1db63e3975b8",
                    "path": "<Mouse>/rightButton",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "InteractAlternate",
                    "isComposite": false,
                    "isPartOfComposite": false
                }
            ]
        },
        {
            "name": "Projection",
            "id": "b9079e11-a64a-42d0-922a-d0fd00315400",
            "actions": [
                {
                    "name": "NextProjectableObject",
                    "type": "Button",
                    "id": "9934c92b-016a-4e12-8577-ccd414ebec7c",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "PreviousProjectableObject",
                    "type": "Button",
                    "id": "953b7721-858e-45a8-aaba-cde690cdf4d7",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "_1stProjectableIObject",
                    "type": "Button",
                    "id": "1debcc65-1952-435e-88af-8d2d78ae95fd",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "_2ndProjectableObject",
                    "type": "Button",
                    "id": "1a049169-f83a-43e5-ae50-ff6707cabfe3",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "_3rdProjectableObject",
                    "type": "Button",
                    "id": "d0088746-bbf8-45f6-b031-b5df1909b021",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "_4thProjectableObject",
                    "type": "Button",
                    "id": "abd3dd7a-a156-4b78-9986-ffd711c64b07",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "_5thProjectableObject",
                    "type": "Button",
                    "id": "0ba5210c-4603-469c-8c78-2f166d51034d",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "AllProjectableObjectsDematerialization",
                    "type": "Button",
                    "id": "0a02e48d-dc35-4c3a-9bdb-7ff499757873",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                }
            ],
            "bindings": [
                {
                    "name": "",
                    "id": "0c694681-bd41-4d3f-84fd-411a1a4dea61",
                    "path": "<Keyboard>/e",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "NextProjectableObject",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "1ab405e1-9a95-4271-b346-b228ac8aa88b",
                    "path": "<Keyboard>/q",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "PreviousProjectableObject",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "f93d076d-796d-4982-9a7d-a18d592dd95c",
                    "path": "<Keyboard>/1",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "_1stProjectableIObject",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "a3e382b2-534b-432c-8282-8b9bc6b79b32",
                    "path": "<Keyboard>/2",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "_2ndProjectableObject",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "0bf92ddc-1719-4043-82bd-21392be5a517",
                    "path": "<Keyboard>/3",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "_3rdProjectableObject",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "09a14990-44ce-42db-a6de-9daaad02cb35",
                    "path": "<Keyboard>/4",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "_4thProjectableObject",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "09f85acc-9610-4e81-94d0-d2e6b7e3a97f",
                    "path": "<Keyboard>/5",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "_5thProjectableObject",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "6562fefd-57b5-4841-afb7-a2bb75b29294",
                    "path": "<Keyboard>/k",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "AllProjectableObjectsDematerialization",
                    "isComposite": false,
                    "isPartOfComposite": false
                }
            ]
        },
        {
            "name": "UI",
            "id": "badac12d-b3f8-4c8d-b173-4f5ccc7ca587",
            "actions": [
                {
                    "name": "Pause",
                    "type": "Button",
                    "id": "798178e4-781d-4050-9741-ae9d8db605cd",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "Inventory",
                    "type": "Button",
                    "id": "ae76292d-1cc5-4113-939e-68ecbac986d1",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                }
            ],
            "bindings": [
                {
                    "name": "",
                    "id": "f0662a92-6a30-483f-a5ed-4d516a046948",
                    "path": "<Keyboard>/escape",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Pause",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "44254351-e097-44b8-8056-22373fc3b9c6",
                    "path": "<Keyboard>/tab",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Inventory",
                    "isComposite": false,
                    "isPartOfComposite": false
                }
            ]
        },
        {
            "name": "Dialogues",
            "id": "3bf00af5-2f07-4d21-97cf-660b9b85a585",
            "actions": [
                {
                    "name": "Skip",
                    "type": "Button",
                    "id": "8657fc0e-6cc9-49df-ae31-03ed99a33fe9",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                }
            ],
            "bindings": [
                {
                    "name": "",
                    "id": "56c85f9c-7bfd-461f-88e7-e3c10e50b630",
                    "path": "<Mouse>/leftButton",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Skip",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "a3dad10a-3151-4194-9dda-edba69339a76",
                    "path": "<Keyboard>/space",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Skip",
                    "isComposite": false,
                    "isPartOfComposite": false
                }
            ]
        }
    ],
    "controlSchemes": []
}